3 changes updated for Isaac

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,10 +12,8 @@
 	</head>
 	<body>
         <a href="/">Home</a>
-<a href="/about/">About</a>  
-<a href="/blog/">Blog</a>  
-<h1>My Astro Learning Blog</h1>
-<p>This is where I will post about my journey learning Astro.</p>
-          
+
+<h1>Love Dada</h1>
+          <p>Send me a messaging saying "Thanks for the cool website Dada" to prove that you read this</p>
 	</body>
 </html>
