--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,17 +11,11 @@
 		<title>Astro</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-<a href="/about/">About</a>  
-<a href="/blog/">Blog</a>  
-        <h1>My Astro Site</h1>
-            <h1>About Me</h1>
-            <h2>... and my new Astro site!</h2>
-          
-            <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
-          
-            <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
-          
+ 
+ 
+        <h1>I hope you are having a good relax today</h1>
+            <h1>And that you're starting to feel much better</h1>
+            <a href="/blog/">Now click here</a> 
 	</body>
 </html>
----
+
