--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,5 +15,6 @@
 
 <h1>Love Dada</h1>
           <p>Send me a messaging saying "Thanks for the cool website Dada" to prove that you read this</p>
+          <h2>And tell me how you're feeling</h2>
 	</body>
 </html>
